# Merrow

./: .env.example  .gitignore  Cargo.toml  DB_SCHEMA.sql  README.md  config.example.toml
docs/: ARCHITECTURE.md  BACKTEST_EXECUTION_SPEC.md  CICD_OBSERVABILITY.md  DATA_INGESTION_SPEC.md  DECISIONS.md  DEVELOPMENT_MANUAL.md  DOMAIN_MODEL.md  EXCHANGE_CONTRACT.md  OPERATIONS.md  RISK_POLICY.md  SPEC.md  TEST_PLAN.md  TRACEABILITY.md  UI_SWOT.md  USER_MANUAL.md
src/: config.rs  lib.rs  main.rs
src/app/: cli.rs  logging.rs  metrics.rs  mod.rs  report.rs  ui_server.rs
src/backtest/: engine.rs  fill.rs  mod.rs
src/core/: mod.rs  order_builder.rs  order_flow.rs  order_router.rs  risk.rs  strategies.rs  strategy.rs  trigger.rs  triggers.rs
src/data/: csv_loader.rs  exchange_loader.rs  market_data.rs  mod.rs
src/exchange/: adapter.rs  binance.rs  bybit.rs  mod.rs  okx.rs  rest.rs  sync.rs
src/models/: mod.rs  types.rs
src/paper/: mod.rs
src/storage/: postgres.rs
tests/: backtest_costs.rs  backtest_engine.rs  backtest_fill.rs  backtest_integration.rs  backtest_metrics.rs  binance_signing.rs  config_loader.rs  config_validation.rs  csv_loader.rs  domain_invariants.rs  exchange_loader.rs  exchange_sync.rs  order_builder.rs  order_flow.rs  paper_mode.rs  report_output.rs  triggers.rs
tests/fixtures/: binance_klines.json  bybit_klines.json  candles.csv  okx_candles.json
ui/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
ui/src/: App.svelte  app.css
